--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,7 @@ MONGO_URL =
 
 # Si lleva NEXT_CLIENT es visible del lado del cliente
 NEXT_PUBLIC_CLIENT_KEY = 
+JWT_SECRET_SEED =
+
+# Variables publicas
+NEXT_PUBLIC_TAX_RATE = 0.15
