--- a/package.json
+++ b/package.json
@@ -17,14 +17,24 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-slideshow-image": "^4.2.1",
     "swr": "^2.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
