--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.0",
