--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,11 @@ MONGO_URL =
 # Si lleva NEXT_CLIENT es visible del lado del cliente
 NEXT_PUBLIC_CLIENT_KEY = 
 JWT_SECRET_SEED =
+NEXTAUTH_SECRET  =
 
 # Variables publicas
 NEXT_PUBLIC_TAX_RATE = 0.15
+
+# Providers:
+GITHUB_ID =
+GITHUB_SECRET =
