--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,13 @@ NEXT_PUBLIC_TAX_RATE = 0.15
 # Providers:
 GITHUB_ID =
 GITHUB_SECRET =
+
+
+# Paypal
+NEXT_PUBLIC_PAYPAL_CLIENT= 
+PAYPAL_SECRET=
+
+## grant_type = client_credentials
+
+PAYPAL_OAUTH_URL=https://api-m.sandbox.paypal.com/v1/oauth2/token
+PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
