mantenimiento de productos

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+HOST_NAME = http://localhost:3000/
+
 SECRET_KEY = 
 MONGO_URL = 
 
@@ -24,3 +26,6 @@ PAYPAL_SECRET=
 
 PAYPAL_OAUTH_URL=https://api-m.sandbox.paypal.com/v1/oauth2/token
 PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
+
+# Cloudinary
+CLOUDINARY_URL=
