--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@mui/material": "^5.13.4",
     "@mui/x-data-grid": "^6.8.0",
     "@paypal/react-paypal-js": "^8.1.1",
+    "@types/formidable": "^3.4.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "formidable": "^2.1.2",
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
